--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,8 +49,8 @@ androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-
 androidx-compose-material3-adaptive-navigation = { module = "androidx.compose.material3.adaptive:adaptive-navigation", version.ref = "material3-adaptive" }
 compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-material-icons-extended" }
 androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref="datastore"}
-coil-core = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
-coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+#coil-core = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
+#coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 
 
 [plugins]
